--- a/templates/css/css-output/sections/tmpl_1.css
+++ b/templates/css/css-output/sections/tmpl_1.css
@@ -1,61 +1,61 @@
-/* ------------------------>>> partners <<<----------------------------------------------------- */
-.partners {
-	padding: 50px 0 100px;
+/* ------------------------>>> new_sect <<<----------------------------------------------------- */
+.new_sect {
+	padding: 50px 0 40px;
 	background-color: #fff;
 }
 
-.partners__title {
+.new_sect__title {
 	font-family: "RobotoLight";
 	font-style: normal;
 	font-weight: normal;
-	font-size: 23px;
+	font-size: 25px;
 	color: #565a65;
 
 	margin: 0 0 55px;
 }
 
-.partners__container {
+.new_sect__container {
 	max-width: 1006px;
 }
 
-.partners__container,
-.partners__innerItem {
+.new_sect__container,
+.new_sect__innerItem {
 	padding-left: 3px;
 	padding-right: 3px;
 }
 
-.partners__row {
+.new_sect__row {
 	margin-left: -3px;
 	margin-right: -3px;
 }
 
-.partners__innerItem {
+.new_sect__innerItem {
 	margin-bottom: 6px;
 }
 
-.partners__item {
+.new_sect__item {
 	background-color: #e0e0e0;
 	height: 56px;
 	line-height: 56px;
 }
 
-.partners__img {
+.new_sect__img {
 	display: inline-block;
 	vertical-align: middle;
 }
 
 @media ( max-width: 768px ) {
 
-	.partners__container {
+	.new_sect__container {
 		padding-left: 15px;
 		padding-right: 15px;
 	}
 
-	.partners {
+	.new_sect {
 		padding: 30px 0 30px;
 	}
 
-	.partners__title {
+	.new_sect__title {
 		margin-bottom: 30px;
 		font-size: 20px;
 	}
@@ -63,4 +63,4 @@
 }
 
 
-/* ------------------------>>> partners End <<<------------------------------------------------- */
+/* ------------------------>>> new_sect End <<<------------------------------------------------- */
