--- a/templates/css/css-output/sections/tmpl_1.css
+++ b/templates/css/css-output/sections/tmpl_1.css
@@ -1,10 +1,10 @@
-/* ------------------------>>> new_sect <<<----------------------------------------------------- */
-.new_sect {
+/* ------------------------>>> name <<<----------------------------------------------------- */
+.name {
 	padding: 50px 0 40px;
 	background-color: #fff;
 }
 
-.new_sect__title {
+.name__title {
 	font-family: "RobotoLight";
 	font-style: normal;
 	font-weight: normal;
@@ -14,48 +14,48 @@
 	margin: 0 0 55px;
 }
 
-.new_sect__container {
+.name__container {
 	max-width: 1006px;
 }
 
-.new_sect__container,
-.new_sect__innerItem {
+.name__container,
+.name__innerItem {
 	padding-left: 3px;
 	padding-right: 3px;
 }
 
-.new_sect__row {
+.name__row {
 	margin-left: -3px;
 	margin-right: -3px;
 }
 
-.new_sect__innerItem {
+.name__innerItem {
 	margin-bottom: 6px;
 }
 
-.new_sect__item {
+.name__item {
 	background-color: #e0e0e0;
 	height: 56px;
 	line-height: 56px;
 }
 
-.new_sect__img {
+.name__img {
 	display: inline-block;
 	vertical-align: middle;
 }
 
 @media ( max-width: 768px ) {
 
-	.new_sect__container {
+	.name__container {
 		padding-left: 15px;
 		padding-right: 15px;
 	}
 
-	.new_sect {
+	.name {
 		padding: 30px 0 30px;
 	}
 
-	.new_sect__title {
+	.name__title {
 		margin-bottom: 30px;
 		font-size: 20px;
 	}
@@ -63,4 +63,4 @@
 }
 
 
-/* ------------------------>>> new_sect End <<<------------------------------------------------- */
+/* ------------------------>>> name End <<<------------------------------------------------- */
